--- a/package.json
+++ b/package.json
@@ -13,5 +13,15 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "~0.1.7",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^1.2.2",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-ruby-sass": "2.0.6",
+    "gulp-uglify": "^1.5.1"
   }
 }
